Prevent to measure the whole word when break-word

crrev.com/385693 changed the line breaker to measure word-by-word then
rewind if break-word/break-all. This causes a performance regression
when a word is extraordinary long, such as minified JS/CSS or
hex/base64 data.

This patch fixes to measure character-by-character, but unlike before
r385693, it lets overflow by 2em then rewind to the correct position.

This prevents the line breaker to measure the whole word, while
still measuring ligatures/kernings correctly as long as the sum of
such effects is within 2em.

BUG=603398

Review URL: https://codereview.chromium.org/1900513002

Cr-Commit-Position: refs/heads/master@{#387974}

Former-commit-id: 41fe145a8629f1f7002b41a8e12687b97d5e635f